# Reinforcement_Learning_environment_Design

./: .env.sample  README.md  inference.py  models.py  prompt.txt  pyproject.toml  test_episode.py
Basics/first_rl_env/: .dockerignore  .env  Dockerfile  client.py  detailed_explanation.md  inference.py  openenv.yaml  walkthrough.md
Basics/first_rl_env/data/: paper_corpus.py
Basics/first_rl_env/graders/: grader.py
Basics/first_rl_env/server/: __init__.py  app.py
Basics/first_rl_env/tasks/: __init__.py
Learning/: Evaluator.py  sarsa_q_table.pkl
Learning/Using Neural Netwroks/: Evaluator.py  Random_Agent.py  SARSA_Agent_Neural_Network.py  sarsa_q_net.h5
Learning/Without Neural Networks/: Evaluator.py  Q_Learning.py  Random_Agent.py  SARSA_Agent.py
RL_Environments/first_rl_env/: .gitignore  README.md  __init__.py  guidelines_hf.md  implementation_plan.md  pyproject.toml  requirements.txt  test_episode.py
RL_Environments/first_rl_env/openenv_first_rl_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
RL_Environments/first_rl_env/openenv_research_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
RL_Environments/first_rl_env/server/: app.py  research_env.py
RL_Environments/first_rl_env/tasks/: easy.py
data/: __init__.py
examples/: OpenEnv_Tutorial.ipynb
graders/: __init__.py  grader.py
server/: app.py  research_env.py
tasks/: __init__.py  hard.py  medium.py
