# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-research-assistant"
version = "0.1.0"
description = "Research Paper Assistant RL environment for OpenEnv — search, filter, summarize, and explain research papers"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.9.0",
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Pydantic for typed models
    "openenv[cli]>=0.1.13",
    "pydantic>=2.0",
]

[project.scripts]
server = "server.app:main"
openenv-research-assistant = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]


[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["data*", "outputs*", "graders*"]
